--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
 [setting]
-CPK_URL = http://192.168.100.4:10028
+CPK_URL = 
 
-USERNAME = admin
-PASSWORD = 888888
+USERNAME = 
+PASSWORD = 
 
 WAITTIME = 5
 SLEEPTIME = 5
